--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ baseurl: ""
 
 permalink: "/:year/:month/:title/"
 paginate: 8
-paginate_path: "/arquivo/pagina/:num/"
+paginate_path: "/page/:num/"
 seo_paginator_message: "Página %<current>s de %<total>s ~ "
 
 exclude:
@@ -74,7 +74,7 @@ jekyll-archives:
   permalinks:
     year: "/:year/"
     month: "/:year/:month/"
-    tag: "/arquivo/tag/:name/"
+    tag: "/tagged/:name/"
   slug_mode: default
 
 # Compose
