tests with author object again

--- a/staticman.yml
+++ b/staticman.yml
@@ -55,7 +55,7 @@ submit:
   requiredFields:
     - title
     - content
-    - author.name
+    - author[name]
   transforms:
     author_email: md5
     content: frontmatterContent
