--- a/staticman.yml
+++ b/staticman.yml
@@ -44,7 +44,9 @@ submit:
     - title
     - content
     - tags
-    - author
+    - author[name]
+    - author[email]
+    - author[url]
   generatedFields:
     date:
       type: date
