--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,6 @@ indent_style = space
 indent_size = 2
 max_line_length = 80
 trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
