corrige o link de contribuição no menu

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,5 @@
 - title: Envie seu post
-  url: "/colabore/"
+  url: "/contribua/"
 - title: Arquivos + tags
   url: "/arquivo/"
 - title: Aleatório
