--- a/admin/config.yml
+++ b/admin/config.yml
@@ -54,4 +54,4 @@ collections:
             fields:
               - { label: Title, name: title, widget: string }
               - { label: URL, name: url, widget: string }
-              - { label: URL, name: url, widget: boolean }
+              - { label: External, name: external, widget: boolean }
