--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,6 +11,9 @@ collections:
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    nested:
+      depth: 100 # max depth to show in the collection tree
+      summary: '{{title}}' # optional summary for a tree node, defaults to the inferred title field
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string"}
@@ -29,16 +32,35 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
   - name: 'authors'
     label: 'Authors'
-    folder: '_authors/'
     create: true
     editor:
       preview: false
-    fields:
-      - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'author' }
-      - { label: 'Short Name', name: 'name', widget: 'string' }
-      - { label: 'Display Name', name: 'display_name', widget: 'string' }
-      - { label: 'Position', name: 'position', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+    files:
+      - label: "Authors"
+        name: "authors"
+        file: "_data/authors.yml"
+        widget: list
+        fields:
+          - {
+            label: Name,
+            name: name,
+            widget: string
+          }
+          - {
+            label: Twitter,
+            name: twitter,
+            widget: string
+          }
+    # folder: '_authors/'
+    # create: true
+    # editor:
+    #   preview: false
+    # fields:
+    #   - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'author' }
+    #   - { label: 'Short Name', name: 'name', widget: 'string' }
+    #   - { label: 'Display Name', name: 'display_name', widget: 'string' }
+    #   - { label: 'Position', name: 'position', widget: 'string' }
+    #   - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'config'
     label: 'Config'
     editor:
