--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ collections:
 
 # Build settings
 markdown: kramdown
+incremental: true
 livereload: true
 
 url: "https://paomortadela.com.br" # mudar no merge
