--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   jekyll:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-      # - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       # Use GitHub Actions' cache to shorten build times and decrease load on servers
       # - uses: actions/cache@v2
       #   with:
