--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - uses: helaili/jekyll-action@v2
+      - uses: helaili/jekyll-action@742d0ede705b0c819d4a13d0f43d3cce07cfe832
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           target_branch: "gh-pages"
