atualiza a mensagem de commit do staticman

--- a/staticman.yml
+++ b/staticman.yml
@@ -79,11 +79,11 @@ submit:
   pullRequestBody: >-
     Olá, Arthur!
     \n
-    Alguém acabou de enviar uma nova sugestão de post, olha que bacana. :tada:
+    Alguém acabou de enviar uma nova sugestão de post, olha que bacana. 🎉
     \n
     Faça um merge desse pull request se estiver tudo certo. Você também pode fazer algumas modificações no post antes de publicar.
     \n
-    Um abraço do seu amigo Staticman.
+    Um abraço do seu amigo Staticman. 🦸‍♂️
     \n
     ---
     \n
