--- a/.pages.yml
+++ b/.pages.yml
@@ -7,21 +7,38 @@ content:
     view:
       fields: [ title, published, date ]
     fields:
-      - name: published
-        label: Published
-        type: boolean
-        default: true
-      - name: date
-        label: Date
-        type: date
+      - name: layout
+        hidden: true
+        type: string
+        default: "post"
       - name: title
         label: Title
         type: string
       - name: body
         label: Body
         type: rich-text
+      - name: date
+        label: Date
+        type: date
+      - name: image
+        label: Image
+        type: image
+      - name: excerpt
+        label: Excerpt
+        type: text
+      - name: tags
+        label: Tags
+        list: true
+        type: string
+      - name: author
+        label: Author
+        type: string
+        required: true
       - name: redirect_from
         label: Redirects
         list: true
         type: string
-        
+      - name: published
+        label: Published
+        type: boolean
+        default: true
