--- a/.pages.yml
+++ b/.pages.yml
@@ -20,6 +20,9 @@ content:
       - name: date
         label: Date
         type: date
+        options:
+          format: "yyyy-MM-dd' 'HH:mm:ss"
+          time: true
       - name: image
         label: Image
         type: image
